# smpl

./: .buildinfo  .coverage  .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CITATION.cff  Makefile  README.md  TODO  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  search.html  searchindex.js  setup.py
.github/: dependabot.yml
.github/workflows/: all.yml  ci.yml  dependabot.yml  devel.yml  fast-forward.yml  ff-comment.yml  ff-pr.yml  pypi.yml  python.yml  release.yml  stable.yml  test.yml  testpypi.yml  unstable.yml
_autosummary/: smpl-functions-1.py  smpl-functions-10.py  smpl-functions-12.py  smpl-functions-2.py  smpl-functions-8.py  smpl-functions-Gauss-1.py  smpl-functions-const-1.py  smpl-functions-cos-1.py  smpl-functions-fac-1.py  smpl-functions-log-1.py  smpl-functions-lorentz-1.py  smpl-functions-order-1.py  smpl-functions-sqrt-1.py  smpl-functions-tan-1.py  smpl-plot-1.py  smpl.animation.FigAnimation.html  smpl.animation.FigureCanvasAgg.html  smpl.animation.animate.html  smpl.animation.clear.html  smpl.animation.dict_product.html  smpl.animation.frame.html  smpl.animation.html  smpl.animation.interactive.html  smpl.animation.list_product.html  smpl.data.data_kwargs.html  smpl.data.filtered_data_split.html  smpl.data.flatmesh.html  smpl.data.html  smpl.data.unv.html  smpl.data.usd.html  smpl.debug.check_count.html  smpl.debug.currentframe.html  smpl.debug.debug.html  smpl.debug.file.html  smpl.debug.file1.html  smpl.debug.get_count.html  smpl.debug.get_frame.html  smpl.debug.get_line_number.html  smpl.debug.get_line_number_file.html  smpl.debug.get_line_src.html  (+506 more)
_downloads/1dee141e8c61271e0415a051c19c2d65/: smpl-functions-exp-1.py
_downloads/4978436bab10feb19ff98d5ae5244e1b/: smpl-functions-sin-1.py
_downloads/f28ad5e48af0327c1759d249a2386343/: smpl-functions-line-1.py
_modules/: contextlib.html  cycler.html  enum.html  index.html  inspect.html  matplotlib.html  numbers.html  pathlib.html  smpl.html  tokenize.html
_modules/importlib/: metadata.html
_modules/matplotlib/: artist.html  backend_bases.html  cm.html  colors.html  figure.html  gridspec.html  image.html  lines.html  patches.html  pyplot.html  scale.html  text.html  ticker.html  widgets.html
_modules/multiprocessing/: context.html
_modules/smpl/: data.html  doc.html  fit.html  functions.html  interpolate.html  latex.html  parallel.html  plot.html  plot2d.html  stat.html  wrap.html
_modules/smpl_animation/: animation.html
_modules/smpl_debug/: debug.html
_modules/smpl_doc/: doc.html
_modules/smpl_io/: grep.html  head.html  io.html  read_buffer.html  sed.html  tail.html
_modules/smpl_parallel/: parallel.html
_modules/smpl_util/: util.html
_modules/tqdm/: std.html
_sources/: index.rst.txt
_sources/_autosummary/: smpl.animation.FigAnimation.rst.txt  smpl.animation.animate.rst.txt  smpl.animation.clear.rst.txt  smpl.animation.dict_product.rst.txt  smpl.animation.frame.rst.txt  smpl.animation.rst.txt  smpl.data.flatmesh.rst.txt  smpl.data.rst.txt  smpl.data.unv.rst.txt  smpl.data.usd.rst.txt  smpl.debug.check_count.rst.txt  smpl.debug.debug.rst.txt  smpl.debug.file.rst.txt  smpl.debug.get_count.rst.txt  smpl.debug.get_line_number_file.rst.txt  smpl.debug.getsource.rst.txt  smpl.debug.inc_count.rst.txt  smpl.debug.line.rst.txt  smpl.debug.line1.rst.txt  smpl.debug.msg.rst.txt  smpl.debug.msg1.rst.txt  smpl.debug.reset_count.rst.txt  smpl.debug.rst.txt  smpl.debug.table.rst.txt  smpl.doc.append_doc.rst.txt  smpl.doc.append_plot.rst.txt  smpl.doc.deprecated.rst.txt  smpl.doc.insert_eq.rst.txt  smpl.doc.insert_latex.rst.txt  smpl.doc.insert_latex_eq.rst.txt  smpl.doc.rst.txt  smpl.fit.Chi2.rst.txt  smpl.fit.LinAlgError.rst.txt  smpl.fit.ODR.rst.txt  smpl.fit.R2.rst.txt  smpl.fit.auto.rst.txt  smpl.fit.rst.txt  smpl.fit.unv.rst.txt  smpl.fit.usd.rst.txt  smpl.functions.Gauss.rst.txt  (+231 more)
_sources/autoapi/: index.rst.txt
_sources/example/: index.rst.txt
_sources/performance/: line.rst.txt
_static/: style.css
autoapi/: index.html
autoapi/smpl/: index.html
debug/: func_range.ipynb
docs/: Makefile
docs/source/: conf.py  index.rst
doctrees/: environment.pickle  index.doctree
doctrees/example/: index.doctree
example/: default.ipynb  index.html  usage.ipynb
example/animation/: Animation.html  Animation.ipynb  histogram.html  histogram.ipynb  index.html  interactive.html  interactive.ipynb
example/fit/: index.html
example/interpolate/: Interpolate.html  Interpolate.ipynb
example/latex/: latex.html  latex.ipynb
example/pandas/: demo_pandas.html  demo_pandas.ipynb  pandas.html  pandas.ipynb
example/parallel/: Untitled.html  Untitled.ipynb  parallel.html  parallel.ipynb
example/plot/: index.html  plot2d.html  plot2d.ipynb
example/uncertainties/: demo_uncertainties.html  demo_uncertainties.ipynb  uncertainties.html  uncertainties.ipynb
html/: index.html  objects.inv  search.html
html/example/: index.html
performance/: index.html  line.html
simple/functions/: functions.py
simple/parallel/: simple_parallel.py
simple/plot/: plot.py
simple/test/: test.py
smpl/: __init__.py  animation.py  data.py  debug.py  doc.py  fit.py  functions.py  interpolate.py  io.py  latex.py  parallel.py  plot.py  plot2d.py  stat.py  util.py  wrap.py
smpl/animation/: __init__.py  animation.py
smpl/data/: __init__.py  data.py
smpl/debug/: __init__.py  debug.py
smpl/doc/: __init__.py  doc.py
smpl/fit/: __init__.py  fit.py  minuit.py  scipy.py
smpl/functions/: __init__.py  functions.py
smpl/interpolate/: __init__.py  interpolate.py
smpl/io/: __init__.py  cat.py  grep.py  head.py  io.py  read_buffer.py  sed.py  tail.py
source/: conf.py  index.rst
test/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
tests/: Untitled.ipynb  plot.py  test.py  test2.py  test3.py  test_animation.py  test_fit.py  test_interpolate_notebook_repro.py  test_line_profiling.py  test_line_profiling_doctests.py  test_linear.txt  test_plot.py  test_wrap.py  var.py  wrap.py
(+1858 files in other folders)
