[tool.poetry]
name = "smpl"
version = "0.0.0"
description = "SiMPLe plotting and fitting"
authors = ["Alexander Puck Neuwirth <alexander@neuwirth-informatik.de>"]
readme = "README.md"
repository = "https://github.com/APN-Pucky/smpl"

[tool.poetry.dependencies]
python = "^3.8"
smpl_debug     = "^1.0.5"
smpl_io        = "^1.0.5"
smpl_doc       = "^1.0.5"
smpl_util      = "^1.0.5"
smpl_parallel  = "^1.0.5"
uncertainties = "*"
numpy = "*"
matplotlib = "*"
scipy = ">=1.7.0"
sympy = "*"
tqdm = "*"
pandas = ">=1.0.0"
deprecation = "*"

iminuit = {version = "*", optional = true} 
smpl_animation= {version = "*", optional = true}

[tool.poetry.extras]
opt = ["iminuit"]

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "<8.0.0" # https://github.com/readthedocs/sphinx_rtd_theme/issues/1463
sphinx-rtd-theme = "*"
sphinxcontrib-napoleon = "*"
nbsphinx = "*"
jupyter-sphinx = "*"
sphinx-autoapi = "*"
sphinx_autobuild = "*"
sphinx_math_dollar = "*"
pandoc = "*"
numpydoc = "*"
myst-parser  = "*"
toml = "*"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pre-commit = ">=2.20,<4.0"
pytest = "*"
pytest-cov =  "*"
pytest-profiling =  "*"
pytest-line-profiler-apn = ">=0.1.5"
#pytest-line-profiler-apn = {path="/home/apn/git/pytest-line-profiler", develop = true}
ipython =  "*"
jupyterlab =  "*"
jupyter = "*"
poetry-dynamic-versioning = {extras = ["plugin"], version = ">=0.21.1,<0.26.0"}

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"
dirty = true
# modified dunami default pattern without v
pattern = '(?x)(?# ignore whitespace)^((?P<epoch>\d+)!)?(?P<base>\d+(\.\d+)*)(?# v1.2.3 or v1!2000.1.2)([-._]?((?P<stage>[a-zA-Z]+)[-._]?(?P<revision>\d+)?))?(?# b0)(\+(?P<tagged_metadata>.+))?$(?# +linux)'
strict = true
format-jinja = "{% if distance == 0 %}{{ base }}{% else %}{{ base }}.{{ distance }}{% endif %}"
